src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Addendum_Template_Id__c</fullName>
        <label>Addendum Template Id</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversary_Term_Text__c</fullName>
        <formula>IF (Loan_Term__c = 126 , &quot;twelfth&quot;,
IF (Loan_Term__c = 162, &quot;fifteenth&quot;, &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in MA Standard Loan Docusign</inlineHelpText>
        <label>Anniversary Term Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Late_Fee_Interest__c</fullName>
        <formula>12 *  Monthly_Late_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Late Fee Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_kWh_Maximum__c</fullName>
        <label>Annual kWh Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the total cancellation fee per contract for a single CS share. If it $0, it means there is no cancellation fee.</description>
        <inlineHelpText>This is the total cancellation fee per contract for a single CS share. If it $0, it means there is no cancellation fee.</inlineHelpText>
        <label>Cancellation Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Paragraph_Three__c</fullName>
        <inlineHelpText>CSCancellationService pulls into the cancellation confirmation email when the customer cancels. Intended to have termination language, and can be left blank. If not blank, the email template assumes the text starts and ends with &lt;br&gt; and &lt;/br&gt;.</inlineHelpText>
        <label>Cancellation Paragraph Three</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Paragraph_Two__c</fullName>
        <inlineHelpText>CSCancellationService pulls into the cancellation confirmation email when the customer cancels. Intended to contain timing information. Follows paragraph one, which confirms the written cancellation request. This text should be surrounded by &lt;br&gt;.</inlineHelpText>
        <label>Cancellation Paragraph Two</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ceiling_Rate__c</fullName>
        <inlineHelpText>The maximum interest rate to which this variable rate product can be adjusted</inlineHelpText>
        <label>Ceiling Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collect_Rate_Class_via_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Maine applications to calculate savings estimate on disclosure form.</description>
        <label>Collect Rate Class via Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Id_s__c</fullName>
        <inlineHelpText>These are the Conga Template record IDs that are used to generate docs in SSF. If there are multiple, they should be separate with a comma and no spaces.</inlineHelpText>
        <label>Conga Template Id(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Docusign_Template__c</fullName>
        <label>Docusign Template (Indiv)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>804B7730-7AEF-4E0E-83E6-DFFBB4A102EA</fullName>
                </value>
                <value>
                    <fullName>BC99DA6F-5376-4CFF-B9F4-6F3159789DA7</fullName>
                </value>
                <value>
                    <fullName>2DA2C8CB-79C8-460B-B68D-DD67DACCD2E4</fullName>
                </value>
                <value>
                    <fullName>034DB2E0-FEFA-4CAD-A9E0-2376FBCA6B9D</fullName>
                </value>
                <value>
                    <fullName>AB363BE5-9969-495D-8333-DA92BA746DE0</fullName>
                </value>
                <value>
                    <fullName>EA86A866-E84B-42C5-A14C-5BF73EE0C6C4</fullName>
                </value>
                <value>
                    <fullName>D9B293B9-CBFD-4DB1-85D3-B969D17DBB7F</fullName>
                </value>
                <value>
                    <fullName>C2FBE529-E8BF-4A1D-B125-C0E7BE478B6C</fullName>
                </value>
                <value>
                    <fullName>4DE7115D-8EE8-45E9-ABC1-E8B978DBA0C8</fullName>
                </value>
                <value>
                    <fullName>5A3E0E2B-447D-43E3-8026-B9D05B47F325</fullName>
                </value>
                <value>
                    <fullName>AA564668-E968-4564-9116-BAD31AF29793</fullName>
                </value>
                <value>
                    <fullName>56B5B3A3-DE0A-4212-8648-E154A79A2E0D</fullName>
                </value>
                <value>
                    <fullName>FA91743C-B530-4853-B886-448F29CA8077</fullName>
                </value>
                <value>
                    <fullName>DDCB6D30-852B-4FFA-B28D-D4E81570AB17</fullName>
                </value>
                <value>
                    <fullName>420676C2-2267-4C9D-B48D-A74F4460D89D</fullName>
                </value>
                <value>
                    <fullName>eb7049d3-ef78-4a17-91fb-b8556f282e55</fullName>
                </value>
                <value>
                    <fullName>9ba2cc6f-9214-437f-ab94-3106a43adcec</fullName>
                </value>
                <value>
                    <fullName>06eb2c0f-125c-49ce-88ad-5b23174f42f0</fullName>
                </value>
                <value>
                    <fullName>91770b80-d380-412b-8291-42e39e315050</fullName>
                </value>
                <value>
                    <fullName>fd0b6223-ca79-44a5-aa1e-8ac1e4634793</fullName>
                </value>
                <value>
                    <fullName>943eefa5-e62e-4cd6-a37e-4909a7749bf4</fullName>
                </value>
                <value>
                    <fullName>87025c4b-5ec3-4d17-a089-520db7c3a740</fullName>
                </value>
                <value>
                    <fullName>fc9a6afd-77ea-457d-9c81-d7cb848fd82c</fullName>
                </value>
                <value>
                    <fullName>14289ec3-a737-420a-9ce5-949e62864f25</fullName>
                </value>
                <value>
                    <fullName>16cb1218-8dd3-4367-97d0-5f492c85c1da</fullName>
                </value>
                <value>
                    <fullName>0fad5cb0-8ee2-414c-a4af-68d062850511</fullName>
                </value>
                <value>
                    <fullName>982e29bb-bee2-4ca4-b468-a779b2173463</fullName>
                </value>
                <value>
                    <fullName>2c0aa246-accc-44d3-a672-c52b8178d53b</fullName>
                </value>
                <value>
                    <fullName>4e4da5c9-fc35-45c5-b88f-49ec7d47aba6</fullName>
                </value>
                <value>
                    <fullName>faea0542-b801-4081-a977-64936834baa7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Maximum__c</fullName>
        <label>Credit Maximum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Minimum__c</fullName>
        <inlineHelpText>The credit approval logic treats this as inclusive, so a credit score = credit minimum is qualified</inlineHelpText>
        <label>Credit Minimum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Subscription_Type__c</fullName>
        <label>Customer Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>kWh</fullName>
                </value>
                <value>
                    <fullName>Electricity Cost ($)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_NOT_EDIT__c</fullName>
        <formula>IMAGE(&quot;https://c.na54.content.force.com/servlet/servlet.FileDownload?file=0150a000001YQe6&quot;, &quot;DO NOT EDIT THIS RECORD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DO NOT EDIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTI_After_Rate_Gross_Up__c</fullName>
        <inlineHelpText>The percentage added to the interest rate when calculating monthly payment amount for DTI After calculation. Intended to be 2% for 5 year adjustable rate loans.</inlineHelpText>
        <label>DTI After Rate Gross Up</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Days_in_Bill_Period__c</fullName>
        <label>Days in Bill Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debt_To_Income_Maximum__c</fullName>
        <description>This is the maximum DTI ratio the customer can have to qualify for this product</description>
        <label>Debt-To-Income Maximum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Business_Usage__c</fullName>
        <label>Default Business Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Residential_Usage__c</fullName>
        <label>Default Residential Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_Multiple_UAL_CSAP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, customer can only apply with 1 Utility Account in CSAP</inlineHelpText>
        <label>Disable Multiple UAL in CSAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursal_Terms__c</fullName>
        <label>Disbursal Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30% Contract Signature, 60% Mechanical Installation, 10% Interconnection</fullName>
                </value>
                <value>
                    <fullName>30% Building Permit Approved, 60% Mechanical Installation, 10% Interconnection</fullName>
                </value>
                <value>
                    <fullName>35% Contract Signature, 65% Interconnection</fullName>
                </value>
                <value>
                    <fullName>20% Building Permit Approved, 70% Mechanical Installation, 0% CED Ensemble, 10% Interconnection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclosure_Form_Conga_Template__c</fullName>
        <inlineHelpText>This is the ID of the Conga template used in SSF for the disclosure form for Contracts generated off of the Contract object.</inlineHelpText>
        <label>Disclosure Form Conga Template</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclosure_Template_Countersigned__c</fullName>
        <inlineHelpText>Conga template ID for the countersigned version of disclosure forms for SSF.</inlineHelpText>
        <label>Disclosure Template (Countersigned)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Template_CoSigner__c</fullName>
        <label>Docusign Template (CoSigner)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BB348C3A-F6AC-4A1E-881C-AF0F316EEDD8</fullName>
                </value>
                <value>
                    <fullName>7B357ACE-EFF9-4171-B3F4-28242C37C4F6</fullName>
                </value>
                <value>
                    <fullName>4BEDFE79-0E01-4FC2-B026-2828F288E292</fullName>
                </value>
                <value>
                    <fullName>e3a5784e-3bdf-4fac-8348-aff0a4e11b35</fullName>
                </value>
                <value>
                    <fullName>0fae820e-411e-4563-8972-82204b95d7dc</fullName>
                </value>
                <value>
                    <fullName>64de3e25-0609-44ed-948d-9c289bc85d55</fullName>
                </value>
                <value>
                    <fullName>f27cd7a2-19b3-4992-8848-5574c5adc2ec</fullName>
                </value>
                <value>
                    <fullName>987ca662-e985-4653-b10f-b80afeb977a5</fullName>
                </value>
                <value>
                    <fullName>e5f672a3-910c-41e5-b5f4-23e3b763d3a5</fullName>
                </value>
                <value>
                    <fullName>c36028a3-1dac-465b-8d72-52291f8a5ba2</fullName>
                </value>
                <value>
                    <fullName>4d4ae715-ec28-400b-a2c8-68cbbb483874</fullName>
                </value>
                <value>
                    <fullName>bbae9246-cfd5-42ce-b70b-c666cc25c16a</fullName>
                </value>
                <value>
                    <fullName>c8524de1-3052-419f-a4c9-4a8ce952f2cb</fullName>
                </value>
                <value>
                    <fullName>02440564-ff45-431a-bcb2-b6d0453b41a4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docusign_Template_Joint__c</fullName>
        <label>Docusign Template (Joint)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>565E203E-F82A-44E5-AAF5-E6CB71AE326C</fullName>
                </value>
                <value>
                    <fullName>0B37CA12-98C6-4130-A7D2-475301315944</fullName>
                </value>
                <value>
                    <fullName>174FD816-D32E-4C80-8231-73447DDDEE4B</fullName>
                </value>
                <value>
                    <fullName>6AFEC5C3-50D4-4849-9FBB-38B864B0C291</fullName>
                </value>
                <value>
                    <fullName>F230A502-BFC7-400A-A3B1-C62CEA0EC4F7</fullName>
                </value>
                <value>
                    <fullName>E0D3E07A-84EE-4E2B-BECE-31297E38DDDC</fullName>
                </value>
                <value>
                    <fullName>F6C0EC9C-7232-4ADE-8715-BCD03CEBE635</fullName>
                </value>
                <value>
                    <fullName>D459BC1D-7535-476C-A80C-081B4B397EEE</fullName>
                </value>
                <value>
                    <fullName>DB1E9B9F-A626-4FDB-87BE-BBE79F3D442E</fullName>
                </value>
                <value>
                    <fullName>A296822D-C308-41DF-A1B4-CBFE96E0F0FD</fullName>
                </value>
                <value>
                    <fullName>65C94B5A-260B-406C-AD4A-CCB1F7AB647C</fullName>
                </value>
                <value>
                    <fullName>E865997A-C8FC-4248-BA39-76F71F0B8FA5</fullName>
                </value>
                <value>
                    <fullName>4534E499-132B-4368-A9E5-FC4E6A8E64EB</fullName>
                </value>
                <value>
                    <fullName>0678D98B-670C-474E-8555-1B12F82BED22</fullName>
                </value>
                <value>
                    <fullName>1DBF049F-5252-4974-BB9A-599E58A1F82B</fullName>
                </value>
                <value>
                    <fullName>C253A8F8-6CEB-445A-9020-94EAFE014107</fullName>
                </value>
                <value>
                    <fullName>1dd238e0-a972-4af1-8856-0f4fc913f8ea</fullName>
                </value>
                <value>
                    <fullName>4e3d7cf5-56ba-49c3-a2df-ac4b762edcb6</fullName>
                </value>
                <value>
                    <fullName>77cdac36-8b81-477c-960b-90a168cb13d1</fullName>
                </value>
                <value>
                    <fullName>f7d73139-50d0-4b81-b10a-f3634811f4b8</fullName>
                </value>
                <value>
                    <fullName>c3c423c4-da07-4ff5-bb6b-61ff0dbb9bb1</fullName>
                </value>
                <value>
                    <fullName>de5db5ef-d76e-4b63-981e-db50de38e011</fullName>
                </value>
                <value>
                    <fullName>09f7249e-7cf0-4350-9389-01353fd41be9</fullName>
                </value>
                <value>
                    <fullName>7d26abc8-47fc-4191-a10b-77664b4f4ff1</fullName>
                </value>
                <value>
                    <fullName>6af4d414-7561-4249-b51a-8a5f73a5985b</fullName>
                </value>
                <value>
                    <fullName>293add0b-8f42-47c0-b566-4b27599e28f6</fullName>
                </value>
                <value>
                    <fullName>09996dba-a086-4e48-bf31-7e72e85a516c</fullName>
                </value>
                <value>
                    <fullName>b2a39ed0-0d85-4d79-99d2-7ead4abcbf34</fullName>
                </value>
                <value>
                    <fullName>db8f9be0-df90-4773-ab7f-af3b65408c65</fullName>
                </value>
                <value>
                    <fullName>b1414fec-59be-4725-bc24-ae20692332d8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Name__c</fullName>
        <formula>IF( Product_Type__c = &quot;SREC&quot;,
    IF (NOT(ISBLANK(Fixed_Payment_per_kW_DC__c)), 
        &quot;Fixed, Monthly Payment - $&quot; &amp; 
         TEXT(FLOOR(Fixed_Payment_per_kW_DC__c)) &amp; &quot;.&quot;
         &amp;
         IF(MOD(Fixed_Payment_per_kW_DC__c, 1) * 100 &lt; 10,
            &quot;0&quot; &amp; TEXT(ROUND(MOD(Fixed_Payment_per_kW_DC__c, 1), 2) * 100),
            TEXT(MIN(ROUND(MOD(Fixed_Payment_per_kW_DC__c, 1), 2) * 100, 99)))
         &amp; &quot; per kW installed (DC)&quot;,
        IF (NOT(ISBLANK(Fixed_Payment__c)), 
            &quot;Fixed Strip, Quarterly Payment - $&quot; &amp; TEXT(Fixed_Payment__c) &amp; &quot; per SREC&quot;,
            IF (NOT(ISBLANK(SREC_Fee_Fixed_Rate__c)),
                &quot;Market Price - $&quot; &amp; TEXT(SREC_Fee_Fixed_Rate__c) &amp; &quot; Fee&quot;,
                IF (NOT(ISBLANK(SREC_Fee_Percentage__c)), 
                    &quot;Market Price - &quot; &amp; TEXT(100*SREC_Fee_Percentage__c) &amp; &quot;% Fee&quot;,
                    &quot;Market Value, Quarterly Payment - SREC price dependent&quot;)))),
     IF (Product_Type__c = &quot;Residential Loan&quot;,
         IF (ISPICKVAL(Program__c, &quot;MSLP&quot;),
             &quot;MA Solar Loan Program - &quot;&amp;TEXT(Loan_Term__c/12)&amp;&quot; Year Term &quot;&amp;TEXT(Loan_Interest_Rate__c*100)&amp;&quot;%&quot;,
             IF (NOT(ISPICKVAL( Index_Rate_for_Adjustment__c, &quot;&quot; )),
                 TEXT(State__c)&amp;&quot; - &quot; &amp;
                 &quot;FlexRate &quot; &amp;
                 TEXT((First_Adjustment__c-1)/12) &amp; &quot; Year Introductory &quot;&amp; 
                 TEXT(Loan_Interest_Rate__c*100)&amp; &quot;% - &quot; &amp; 
                 TEXT((Loan_Term__c+Loan_Interest_Only_Period__c)/12)&amp; &quot; Year Term, &quot; &amp; 
                 TEXT(Loan_Interest_Only_Period__c)&amp; &quot; Month Interest Only &quot;,

                 TEXT(State__c)&amp; 
                 &quot; - &quot; &amp;
                 TEXT((Loan_Term__c+Loan_Interest_Only_Period__c)/12)&amp; &quot; Year Term, &quot; &amp; 
                 TEXT(Loan_Interest_Only_Period__c)&amp; &quot; Month Interest Only &quot;&amp;
                 TEXT(Loan_Interest_Rate__c*100)&amp; &quot;%&quot;)),
         Name))</formula>
        <inlineHelpText>External product name for use in portals</inlineHelpText>
        <label>External Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Fee_Legal_Disclaimer__c</fullName>
        <description>Merge field for docusign templates to update the &quot;Lender&apos;s Fee&quot; section on page 4 of the loan document</description>
        <label>Financing Fee Legal Disclaimer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Adjustment__c</fullName>
        <inlineHelpText>The month number that the first rate adjustment can happen for a variable rate product. Month 60 implies a fixed rate for 5 years and variable after that</inlineHelpText>
        <label>First Adjustment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Payment__c</fullName>
        <label>Fixed Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Payment_per_kW_DC__c</fullName>
        <description>For Option C SREC Offering</description>
        <inlineHelpText>For Option C SREC Offering</inlineHelpText>
        <label>Fixed SREC Payment (per kW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Rate__c</fullName>
        <inlineHelpText>The minimum interest rate to which this variable rate product can be adjusted</inlineHelpText>
        <label>Floor Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Generic_Terms_Conga_Template__c</fullName>
        <inlineHelpText>This is the conga template id for the generic terms contract generated off of the Contract object in SSF.</inlineHelpText>
        <label>Generic Terms Conga Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Terms_Template_Countersigned__c</fullName>
        <inlineHelpText>Conga template ID for the countersigned version of generic terms templates</inlineHelpText>
        <label>Generic Terms Template (Countersigned)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Project_Specific_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this Product is a Generic Product with related Products that hold Project Specific Details</inlineHelpText>
        <label>Has Project Specific Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_in_Requested_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hides this product as an loan application option, in the &quot;Requested Product&quot; picklist</inlineHelpText>
        <label>Hide in Requested Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IBLS_Category__c</fullName>
        <inlineHelpText>Set if this product requires an MSL IBLS Category.</inlineHelpText>
        <label>IBLS Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignore_Load_Zones_When_Qualifying__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether or not Load Zones should be considered when qualifying a lead</inlineHelpText>
        <label>Ignore Load Zones When Qualifying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Index_Rate_for_Adjustment__c</fullName>
        <inlineHelpText>The benchmark index used to calculate interest rate changes for variable rate products</inlineHelpText>
        <label>Index Rate for Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Benchmark_Indices</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_of_Record__c</fullName>
        <description>The Lender that originates this loan, used to format loan application appropriately (e.g. showing Avidia logos)</description>
        <label>Lender of Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Base_Rate__c</fullName>
        <label>Loan Base Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Date_Structure__c</fullName>
        <label>Loan Date Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueWave Solar Loan</fullName>
                </value>
                <value>
                    <fullName>MSLP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Fee_1_Description__c</fullName>
        <inlineHelpText>Description for Loan Fee 1</inlineHelpText>
        <label>Loan Fee 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Fee_1__c</fullName>
        <description>The Lead formula assumes this is a percentage of the Requested Loan Amount, but if we wanted to support a flat amount, we could add a Loan Fee 1 Type picklist (Percentage or Flat Fee Currency), and update the Lead field to use it.</description>
        <inlineHelpText>Loan Fee, like the FL Stamp Tax or Financing Fee, applied to Principal, but not Requested Loan Amount.</inlineHelpText>
        <label>Loan Fee 1</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Financing_Fee_Terms__c</fullName>
        <label>Loan Financing Fee Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maximum (5%, $1,250)</fullName>
                </value>
                <value>
                    <fullName>No Financing Fee</fullName>
                </value>
                <value>
                    <fullName>Maximum (7%, $1,250)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Interest_Only_Period__c</fullName>
        <label>Loan Interest Only Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Interest_Rate__c</fullName>
        <label>Loan Interest Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Internal_Lender_Rate__c</fullName>
        <label>Loan Internal Lender Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <label>Loan Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Tranche_Type__c</fullName>
        <label>Loan Tranche Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Subscription_kW_AC_for_DC_calc__c</fullName>
        <inlineHelpText>When populated, multiplied by the Conversion Ratio on SSS to populate Maximum Subscription Capacity (kW DC). Intended to be set to 25 kW AC for SMART projects.</inlineHelpText>
        <label>Max Subscription kW AC for DC calc</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Adjustment__c</fullName>
        <inlineHelpText>The maximum percentage a rate can change when adjusted</inlineHelpText>
        <label>Maximum Adjustment</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Loan_Size__c</fullName>
        <inlineHelpText>If populated, the maximum amount for this loan</inlineHelpText>
        <label>Maximum Loan Size</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Late_Fee__c</fullName>
        <inlineHelpText>4 Decimal Places. Overdue balance is multiplied by this number every month to calculate late fees</inlineHelpText>
        <label>Monthly Late Fee Interest</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Months_Between_Adjustment__c</fullName>
        <inlineHelpText>The number of months that a rate must remain fixed after changing. 36 months implies a rate would change at most every three years</inlineHelpText>
        <label>Months Between Adjustment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_in_Adjustable_Rate_Period__c</fullName>
        <description>used in docusign for loan note</description>
        <formula>Loan_Term__c -  Months_in_Set_Rate_Period__c</formula>
        <inlineHelpText>used in docusign for loan note</inlineHelpText>
        <label>Months in First Adjustable Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_in_Final_3rd_Adjustment_Period__c</fullName>
        <description>To be used only in the fifth line if the fifth is the final line in the ARL loan note in docusign</description>
        <formula>TermPlusIO__c - ((Months_Between_Adjustment__c * 2 )+  Loan_Interest_Only_Period__c + Months_in_Set_Rate_Period__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be used only in the fifth line if the fifth is the final line in the ARL loan note in docusign</inlineHelpText>
        <label>Months in Final 3rd Adjustment Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_in_Set_Rate_Period__c</fullName>
        <description>For loan note in docusign</description>
        <formula>First_Adjustment__c -Loan_Interest_Only_Period__c-1</formula>
        <inlineHelpText>For loan note in docusign</inlineHelpText>
        <label>Months in Set Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMC_Discount__c</fullName>
        <label>NMC Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NM_Rate_Floor__c</fullName>
        <label>NM Rate Floor</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Conga_Template_Id_s__c</fullName>
        <description>These are the Conga Template record IDs that are used to generate docs in SSF. If there are multiple, they should be separate with a comma and no spaces</description>
        <inlineHelpText>These are the Conga Template record IDs that are used to generate docs in SSF. If there are multiple, they should be separate with a comma and no spaces</inlineHelpText>
        <label>Opp Conga Template Id(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When populated, looks up to Parent Product for a Boilerplate Product Template</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Share_Decimal_Places__c</fullName>
        <inlineHelpText>For percent field, so 23.45% is 0.2345 (4 decimal places) and 23.4567 is 0.234567 (6 decimal places)</inlineHelpText>
        <label>XXPercent Share Decimal Places</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Structure__c</fullName>
        <label>Pricing Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Use Solar Electric Rate</fullName>
                </value>
                <value>
                    <fullName>Fixed % Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>